--- a/charts/MQTTMonitor/values.yaml
+++ b/charts/MQTTMonitor/values.yaml
@@ -1,4 +1,4 @@
-# Default values for MQQTMonitor.
+# Default values for MQTTMonitor.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
