--- a/charts/Archive/test2.yaml
+++ b/charts/Archive/test2.yaml
@@ -7,7 +7,7 @@ metadata:
     k8s-app: bongo
     pod-template-hash: 5b8dc89c49
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-  name: {{ template "fullname" . }}
+  name: {{ template "MQTTMonitor.fullname" . }}
   ownerReferences:
     - apiVersion: apps/v1
       blockOwnerDeletion: true
