--- a/charts/MQTTMonitor/templates/hpa.yaml
+++ b/charts/MQTTMonitor/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "MQQTMonitor.fullname" . }}
+  name: {{ include "MQTTMonitor.fullname" . }}
   labels:
-    {{- include "MQQTMonitor.labels" . | nindent 4 }}
+    {{- include "MQTTMonitor.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "MQQTMonitor.fullname" . }}
+    name: {{ include "MQTTMonitor.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
