--- a/charts/serviceaccount.yaml
+++ b/charts/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "MQQTMonitor.serviceAccountName" . }}
+  name: {{ include "MQTTMonitor.serviceAccountName" . }}
   labels:
-    {{- include "MQQTMonitor.labels" . | nindent 4 }}
+    {{- include "MQTTMonitor.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
