--- a/charts/MQTTMonitor/templates/deployment.yaml
+++ b/charts/MQTTMonitor/templates/deployment.yaml
@@ -1,49 +1,137 @@
 apiVersion: apps/v1
 kind: Deployment
+metadata:
+  name: {{ include "mqttmonitor.fullname" . }}
+  labels:
+    {{- include "mqttmonitor.labels" . | nindent 4 }}
 spec:
-  containers:
-    - image: eclipse-mosquitto
-      imagePullPolicy: Always
-      name: mosquitto
-      resources: {}
+{{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.replicaCount }}
+{{- end }}
+  selector:
+    matchLabels:
+      {{- include "mqttmonitor.selectorLabels" . | nindent 6 }}
+  template:
+    metadata:
+    {{- with .Values.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+    {{- end }}
+      labels:
+        {{- include "mqttmonitor.selectorLabels" . | nindent 8 }}
+    spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      serviceAccountName: {{ include "mqttmonitor.serviceAccountName" . }}
       securityContext:
-        privileged: false
-        procMount: Default
-      terminationMessagePath: /dev/termination-log
-      terminationMessagePolicy: File
-    - image: influxdb
-      imagePullPolicy: Always
-      name: influxdb
-      resources: {}
-      securityContext:
-        privileged: false
-        procMount: Default
-      terminationMessagePath: /dev/termination-log
-      terminationMessagePolicy: File
-    - image: grafana/grafana
-      imagePullPolicy: Always
-      name: grafana
-      resources: {}
-      securityContext:
-        privileged: false
-        procMount: Default
-      terminationMessagePath: /dev/termination-log
-      terminationMessagePolicy: File
-  dnsPolicy: ClusterFirst
-  nodeName: aks-agentpool-86275814-0
-  priority: 0
-  restartPolicy: Always
-  schedulerName: default-scheduler
-  securityContext: {}
-  serviceAccount: default
-  serviceAccountName: default
-  terminationGracePeriodSeconds: 30
-  tolerations:
-    - effect: NoExecute
-      key: node.kubernetes.io/not-ready
-      operator: Exists
-      tolerationSeconds: 300
-    - effect: NoExecute
-      key: node.kubernetes.io/unreachable
-      operator: Exists
-      tolerationSeconds: 300
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      containers:
+        - name: grafana
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.grafana.repository }}:{{ .Values.grafana.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.grafana.pullPolicy }}
+          ports:
+            - name: http
+              containerPort: 3000
+              protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+
+        - name: influxdb
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.influxdb.repository }}:{{ .Values.influxdb.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.influxdb.pullPolicy }}
+          ports:
+            - name: http
+              containerPort: 8086
+              protocol: TCP
+          env:
+            - name: INFLUXDB_USER
+              value: "root"              
+            - name: INFLUXDB_USER_PASSWORD
+              value: "root"              
+            - name: INFLUXDB_DB
+              value: "home_db"              
+#          livenessProbe:
+#            httpGet:
+#              path: /
+#              port: http
+#          readinessProbe:
+#            httpGet:
+#              path: /
+#              port: http
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+
+
+        - name: mosquitto
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.mosquitto.repository }}:{{ .Values.mosquitto.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.mosquitto.pullPolicy }}
+          ports:
+            - name: http
+              containerPort: 1883
+              protocol: TCP
+#          livenessProbe:
+#            httpGet:
+#              path: /
+#              port: http
+#          readinessProbe:
+#            httpGet:
+#              path: /
+#              port: http
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+
+
+        - name: mqttbridge
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.mqttbridge.repository }}:{{ .Values.mqttbridge.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.mqttbridge.pullPolicy }}
+          ports:
+            - name: http
+              containerPort: 80
+              protocol: TCP
+          env:
+            - name: INFLUXDB_ADDRESS
+              value: {{ .Values.mqttbridge.influxdb }}
+            - name: MOSQUITTO_ADDRESS
+              value: {{ .Values.mqttbridge.mosquitto }}
+#          livenessProbe:
+#            httpGet:
+#              path: /
+#              port: http
+#          readinessProbe:
+#            httpGet:
+#              path: /
+#              port: http
+
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
