--- a/charts/MQTTMonitor/values.yaml
+++ b/charts/MQTTMonitor/values.yaml
@@ -1,14 +1,34 @@
-# Default values for MQTTMonitor.
+# Default values for mqttmonitor.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
-image:
-  repository: nginx
+grafana:
+  repository: grafana/grafana
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "5.4.3"
+
+influxdb:
+  repository: influxdb
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "1.7"
+
+mosquitto:
+  repository: eclipse-mosquitto
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "1.6"
+
+mqttbridge:
+  repository: gluteusmaximus/mqttbridge
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "latest"
+  influxdb: "localhost"
+  mosquitto: "localhost"
 
 imagePullSecrets: []
 nameOverride: ""
