--- a/charts/MQTTMonitor/values.yaml
+++ b/charts/MQTTMonitor/values.yaml
@@ -24,7 +24,7 @@ mosquitto:
 
 mqttbridge:
   repository: gluteusmaximus/mqttbridge
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
   influxdb: "localhost"
@@ -57,8 +57,11 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
-  port: 80
+# https://docs.microsoft.com/en-us/azure/aks/concepts-network
+#  type: ClusterIP
+  type: LoadBalancer
+  externalport: 80
+  targetport: 3000
 
 ingress:
   enabled: false
@@ -66,7 +69,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: grafana
       paths: []
   tls: []
   #  - secretName: chart-example-tls
