--- a/charts/mqttbongo.yaml
+++ b/charts/mqttbongo.yaml
@@ -119,13 +119,13 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    service.beta.kubernetes.io/azure-dns-label-name: mosquitto
+    service.beta.kubernetes.io/azure-dns-label-name: bongomqtt
     service.beta.kubernetes.io/azure-load-balancer-resource-group: MC_Bongo_Bongo_uksouth
   name: mosquitto
   labels:
     environment: devs
 spec:
-  loadBalancerIP: 20.49.146.32
+  loadBalancerIP: 20.49.137.76
   type: LoadBalancer
   ports:
   - port: 1883
@@ -152,9 +152,23 @@ spec:
     spec:
       nodeSelector:
         "beta.kubernetes.io/os": linux
+      volumes:
+      - name: mqttdisk
+        azureDisk:
+          diskName: AKSStorage
+          diskURI: "/subscriptions/73a97781-98ea-4939-aa9d-f4c6233b011e/resourcegroups/MC_Bongo_Bongo_uksouth/providers/Microsoft.Compute/disks/AKSStorage"
+          cachingMode: ReadWrite
+          fsType: ext4
+          readOnly: false
+          kind: Managed
+      securityContext:
+          fsGroup: 472
       containers:
       - name: grafana
         image: grafana/grafana:5.4.3
+        volumeMounts:
+        - name: mqttdisk
+          mountPath: "/var/lib/grafana"
         resources:
           requests:
             cpu: 100m
@@ -172,6 +186,9 @@ metadata:
   name: grafana
   labels:
       environment: dev
+  annotations:
+    service.beta.kubernetes.io/azure-dns-label-name: bongo
+    service.beta.kubernetes.io/azure-load-balancer-resource-group: MC_Bongo_Bongo_uksouth
 spec:
   ports:
   - port: 80
@@ -179,24 +196,5 @@ spec:
     targetPort: 3000
   selector:
     app: grafana
-  type: ClusterIP
----
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: mqttbongo-ingress-static
-  namespace: dev
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
-spec:
-  rules:
-  - http:
-      paths:
-      - backend:
-          serviceName: grafana
-          servicePort: 80
-        path: /(.*)
-    host: bongo.uksouth.cloudapp.azure.com
-
+  loadBalancerIP: 20.49.146.32
+  type: LoadBalancer
