--- a/02-bridge/Dockerfile
+++ b/02-bridge/Dockerfile
@@ -7,6 +7,7 @@ COPY requirements.txt /
 RUN pip install -r /requirements.txt
 
 COPY . /app
+COPY cayennelpp /app/cayennelpp
 WORKDIR /app
 
 CMD ["python3", "-u", "main.py"]
